@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-06
+2012-03-27 Andy Salnikov
+- added code to dump new type BldDataEBeamV3
+
 Tag: V00-02-05
 2012-03-14 Andy Salnikov
 - added code to dump new type TimePix::ConfigV2
